--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Scrim-s02ti59",
-  "description": "https://scrimba.com/fullstack-path-c0fullstack/~0ef",
+  "name": "Cookie-Consent",
+  "description": "Daily learning tasks",
   "scripts": {
     "start": "vite",
     "dev": "vite",
